[package]
name = "redistree"
version = "0.1.0"
authors = ["OhBonsai <letbonsaibe@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]
name = "retree"


[dependencies]
redis-module = { version="0.11", features = ["experimental-api"]}
#redis-module = { path= "deps/redis-module", features=["experimental-api"]}
trees = {path= "deps/trees", package="trees"}

